it works! testing in ArMap

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,8 @@
                 "WaitOnNormalExit",
                 "RedirectOutput"
             ],
-            "args": ["-n","-i",  "C:/development/python/SonarCoverage/*.xtf", "-odix", "shapefiles"],
+            "args": ["-n","-i",  "U:/GP1500/GP1500-3_(Proc)/GIS/200_Data_Holidays_GIS/NadirGap_Review_Sonarwiz_vs_ROAMES/Test_polygon_script_PK/35SE_XTFs_Roames_2D/*.xtf", "-odix", "shapefiles"]
         }
    ]
 }
+            //#"args": ["-n","-i",  "C:/development/python/SonarCoverage/*.xtf", "-odix", "shapefiles"],
